2001-04-27  Ezra Peisach  <epeisach@mit.edu>

	* ftp_var.h: Prototype for recvrequest() needs volatile
 	declaration to match code. Native Dec Alpha compiler errors on the
 	inconsistancy.

	* secure.h (PROTOTYPE): Only define if not defined already.

2001-04-26  Ken Raeburn  <raeburn@mit.edu>

	* ftp_var.h (PROTOTYPE): Always define to use supplied prototype.
	* secure.h (PROTOTYPE): Likewise.

2001-03-07  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (strerror): Only define if not HAVE_STRERROR.
	* ftp.c (strerror): Likewise.
	* secure.c (secure_putbuf, secure_getbyte): Use strerror.

2000-11-21  Ken Raeburn  <raeburn@mit.edu>

	* cmds.c (globulize): Use correct address of globbed results when
	freeing storage.  Patch from Nalin Dahyabhai <nalin@redhat.com>.

2000-10-23  Tom Yu  <tlyu@mit.edu>

	* secure.h: Change SESSION to refer to &cred.session instead, so
	as to have the correct pointer type when passed to
	{mk,rd}_{safe,priv}() functions.

Tue Oct 10 05:01:21 2000  Ezra Peisach  <epeisach@mit.edu>

	* ftp.c (do_auth): Remove debugging printf which I inadvertantly
 	introduced.

2000-08-29  Alexandra Ellwood  <lxs@mit.edu>

        * cmds.c, cmdtab.c, ftp_var.h: renamed getmode() and setmode()
	to get_mode() and set_mode() to avoid a collision with Mac OS X
	file permission bits manipulation functions of the same name
	which get included through unistd.h.

Tue Aug 22 17:10:39 2000  Ezra Peisach  <epeisach@mit.edu>

	* secure.h (myaddr): For secure data stream, pass the port number
 	of the data stream and not the control stream to krb_mk_priv.

2000-08-17  Ezra Peisach  <epeisach@mit.edu>

	* domacro.c: Compiler warning cleanups and fix the overflow fix to
	index the proper array.

	* cmds.c, cmdtab.c, ftp.c, ftp_var.h, getpass.c, glob.c, main.c,
	radix.c, ruserpass.c, secure.c, secure.h: Compiler warning
	cleanups including providing prototypes, cleanup of assignments in
	conditionals, including unistd.h and stdlib.h (if present),